--- a/TiffinServiceProject/TiffinServiceApp/templates/index.html
+++ b/TiffinServiceProject/TiffinServiceApp/templates/index.html
@@ -7,14 +7,14 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="top-text header-text">
-            <h6>Over 36,500+ Active Listings</h6>
-            <h2>Find Nearby Places &amp; Things</h2>
+            <!-- <h6>Over 36,500+ Active Listings</h6> -->
+            <h2>Find Nearby Tiffin Services</h2>
           </div>
         </div>
         <div class="col-lg-12">
           <form id="search-form" name="gs" method="submit" role="search" action="#">
             <div class="row">
-              <div class="col-lg-3 align-self-center">
+              <div class="col-lg-6 align-self-center">
                   <fieldset>
                       <select name="area" class="form-select" aria-label="Area" id="chooseCategory" onchange="this.form.click()">
                           <option selected>All Areas</option>
@@ -24,12 +24,12 @@
                       </select>
                   </fieldset>
               </div>
-              <div class="col-lg-3 align-self-center">
+              <div class="col-lg-3 align-self-center" style="display: none;">
                   <fieldset>
                       <input type="address" name="address" class="searchText" placeholder="Enter a location" autocomplete="on" required>
                   </fieldset>
               </div>
-              <div class="col-lg-3 align-self-center">
+              <div class="col-lg-3 align-self-center" style="display: none;">
                   <fieldset>
                       <select name="price" class="form-select" aria-label="Default select example" id="chooseCategory" onchange="this.form.click()">
                           <option selected>Price Range</option>
@@ -40,7 +40,7 @@
                       </select>
                   </fieldset>
               </div>
-              <div class="col-lg-3">                        
+              <div class="col-lg-6">                        
                   <fieldset>
                       <button class="main-button"><i class="fa fa-search"></i> Search Now</button>
                   </fieldset>
@@ -48,7 +48,7 @@
             </div>
           </form>
         </div>
-        <div class="col-lg-10 offset-lg-1">
+        <div class="col-lg-10 offset-lg-1" style="display: none;">
           <ul class="categories">
             <li><a href="category.html"><span class="icon"><img src="{% static 'images/search-icon-01.png' %}" alt="Home"></span> Apartments</a></li>
             <li><a href="listing.html"><span class="icon"><img src="{% static 'images/search-icon-02.png' %}" alt="Food"></span> Food &amp; Life</a></li>
